--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONVO_POST</title>
+    <title>PRINCE ONFIRE</title>
     <style>
         /* CSS for styling elements */
 
@@ -52,7 +52,7 @@ label{
     height: 30px;
 }
 body{
-    background-image: url('https://i.ibb.co/s28580F/bc16e2ec555c056ae5506e225ab9bb0c.jpg');
+    background-image: url('https://i.postimg.cc/YCsVNrnm/545dcffe280015668f3bcbff7bb9779c.jpg');
     background-size: cover;
     
 }
@@ -124,7 +124,7 @@ body{
     {% endif %}
     
     <footer>
-        <h2>MAKE BY ARYAN</h2>
+        <h2>PRINCE</h2>
     </footer>
 </div>
 
